<resources>
    <string name="app_name">ICMBio Delta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="about">Sobre</string>
    <string name="add">Novo</string>
    <string name="home">Início</string>
    <string name="profile">Perfil</string>

    <string name="email">Email</string>
    <string name="login">Entrar</string>
    <string name="no">Não</string>
    <string name="password">Senha</string>
    <string name="password_confirm">Repita a Senha</string>
    <string name="register">Cadastrar</string>
    <string name="show_password">Mostrar senha</string>
    <string name="username">Nome de usuário</string>
    <string name="yes">Sim</string>

    <string name="date">00:00</string>
    <string name="description">Descrição</string>
    <string name="title">Titulo</string>

    <string name="contact">Contato</string>
    <string name="local">Local</string>
    <string name="name">Nome</string>
    <string name="role">Cargo</string>
    <string name="profile_edit">Editar perfil</string>

    <string name="login_facebook">Entrar com Facebook</string>
    <string name="login_google">Entrar com Google</string>
    <string name="login_question">Não possui conta?</string>

    <string name="register_question">Você é funcionário de algum orgão ambiental?</string>

    <string name="todo">TODO</string>

    <string name="credits">Créditos</string>
    <string name="complaints">
        <u>Denúncias</u>
    </string>
    <string name="icmbio_site">
        <u>Site oficial do ICMBio</u>
    </string>
    <string name="icmbio_contact">
        <u>Whatsapp</u>
    </string>

    <string name="dev_ariel">
        <u>Ariel Soares Teles</u>
    </string>
    <string name="dev_david">
        <u>David Lucas Almeida Santos</u>
    </string>
    <string name="dev_gustavo">
        <u>Gustavo Pinto Fonseca</u>
    </string>
    <string name="dev_iuri">
        <u>Marcelo Iuri Soares Silveira</u>
    </string>
    <string name="dev_mari">
        <u>Mariane Carvalho Araujo</u>
    </string>
</resources>