<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.Navigation.AboutFragment">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Informações"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSobre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Este aplicativo foi desenvolvido atravez de um projeto de pesquisa feito no ifma campus Araioses"
        android:textColor="#CC000000"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvicmbio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="ICMBio"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSobre" />


    <TextView
        android:id="@+id/tvicmbionumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:linksClickable="true"
        android:text="@string/icmbio_contact"
        android:textColor="@color/link"
        app:layout_constraintStart_toStartOf="@+id/tvicmbiosite"
        app:layout_constraintTop_toBottomOf="@+id/tvicmbiosite" />

    <TextView
        android:id="@+id/tvicmbiodenuncia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:linksClickable="true"
        android:text="@string/complaints"
        android:textColor="@color/link"
        app:layout_constraintBottom_toTopOf="@+id/tvdesenvolvedores"
        app:layout_constraintStart_toStartOf="@+id/tvicmbionumero"
        app:layout_constraintTop_toBottomOf="@+id/tvicmbionumero" />

    <TextView
        android:id="@+id/tvicmbiosite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:linksClickable="true"
        android:text="@string/icmbio_site"
        android:textColor="@color/link"
        app:layout_constraintStart_toStartOf="@+id/tvicmbio"
        app:layout_constraintTop_toBottomOf="@+id/tvicmbio" />

    <TextView
        android:id="@+id/tvdesenvolvedores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="Desenvolvedores"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tvdevariel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvicmbiodenuncia" />


    <TextView
        android:id="@+id/tvdevariel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:linksClickable="true"
        android:text="@string/dev_ariel"
        android:textColor="@color/link"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/tvdesenvolvedores" />

    <TextView
        android:id="@+id/tvdevmariane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:linksClickable="true"
        android:text="@string/dev_mari"
        android:textColor="@color/link"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/tvdevariel" />

    <TextView
        android:id="@+id/tvdeviuri"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:linksClickable="true"
        android:text="@string/dev_iuri"
        android:textColor="@color/link"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/tvdevmariane" />

    <TextView
        android:id="@+id/tvdevdavid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:linksClickable="true"
        android:text="@string/dev_david"
        android:textColor="@color/link"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/tvdeviuri" />

    <TextView
        android:id="@+id/tvdevgustavo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:linksClickable="true"
        android:text="@string/dev_gustavo"
        android:textColor="@color/link"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/tvdevdavid" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Coordenador(a):"
        android:textColor="#CC000000"
        app:layout_constraintEnd_toStartOf="@+id/tvdevariel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvdevariel" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Programador(a):"
        android:textColor="#CC000000"
        app:layout_constraintEnd_toStartOf="@+id/tvdevmariane"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvdevmariane" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Programador(a):"
        android:textColor="#CC000000"
        app:layout_constraintEnd_toStartOf="@+id/tvdeviuri"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvdeviuri" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Programador(a):"
        android:textColor="#CC000000"
        app:layout_constraintEnd_toStartOf="@+id/tvdevdavid"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvdevdavid" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="Analista:"
        android:textColor="#CC000000"
        app:layout_constraintEnd_toStartOf="@+id/tvdevgustavo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvdevgustavo" />


</androidx.constraintlayout.widget.ConstraintLayout>